# oximite

./: Cargo.toml  README.md  build.rs  flash-wifi.bat  memory.x  states.puml
html/: index.html
src/: buttons.rs  control.rs  flow_meter.rs  leds.rs  main.rs  settings.rs  state.rs  uart_task.rs  wifi_task.rs
tests/: pyproject.toml  test_oximite.py
