[package]
edition = "2021"
name = "oximite"
version = "0.1.0"
authors = ["Slava <pchala@gmail.com>"]
resolver = "2"

[[bin]]
name = "oximite"
test = false
bench = false

[features]
default = ["wifi", "simulation"]
hil_test = ["simulation"]
wifi = ["simulation"]
simulation = []

[dependencies]
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-net = { version = "0.8.0", features = ["defmt", "tcp", "udp", "dhcpv4", "dhcpv4-hostname", "medium-ethernet", "proto-ipv4"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
cyw43 = { version = "0.6.0", features = ["defmt"] }
cyw43-pio = { version = "0.9.0", features = ["defmt"] }
rp2040-boot2 = "0.3.0"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
pio = "0.3.0"
embedded-io-async = "0.7.0"
sequential-storage = "3.0.0"

# Utils
defmt = "1.0.1"
defmt-rtt = "1.1.0"
fixed = "1.28.0"
heapless = { version = "0.9.2", features = ["serde"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
static_cell = "2.1.0"
portable-atomic = { version = "1.10", features = ["critical-section"] }

[build-dependencies]
flate2 = "1.0"

[profile.release]
opt-level = 3         # Maximize performance
lto = "fat"           # Maximum Link Time Optimization across all crates
codegen-units = 1     # Optimize as a single unit for better performance
panic = "abort"       # Minimize binary size by removing unwinding
debug = 2             # Keep debug symbols for defmt to work
# strip = true        # Do NOT strip symbols as defmt relies on them
incremental = false   # Improve optimization at the cost of build time

[profile.dev]
debug = 2
lto = true
opt-level = "z"